--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 
+# Ignore
+
 .DS_Store                                                                   
 .Trashes                                                                    
-README_custom.md                                                           
+#README_optional.md                                                           
 \#*
 *~
 dotfiles/.emacs.d/autosaves                                                 
@@ -9,4 +11,4 @@ dotfiles/.emacs.d/backups
 dotfiles/.emacs.d/auto-save-list                                            
 dotfiles/.emacs.d/snippets                                                  
 dotfiles/.emacs.d/ido.last                                                  
-dotfiles/.emacs.d/elpa/  
+dotfiles/.emacs.d/elpa  
