--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 #README_optional.md                                                           
 \#*
 *~
+archive
 dotfiles/.emacs.d/autosaves                                                 
 dotfiles/.emacs.d/backups                                                   
 dotfiles/.emacs.d/auto-save-list                                            
