--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,6 @@ dotfiles/.emacs.d/auto-save-list
 dotfiles/.emacs.d/snippets                                                  
 dotfiles/.emacs.d/ido.last                                                  
 dotfiles/.emacs.d/elpa  
+dotfiles/.emacs.d/speed-type
 dotfiles/.emacs.d/configFiles/init_trial.el
 archive
-speed-type
