added github-flavored markdown css

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,5 @@ dotfiles/.emacs.d/ido.last
 dotfiles/.emacs.d/elpa  
 dotfiles/.emacs.d/speed-type
 dotfiles/.emacs.d/configFiles/init_trial.el
+dotfiles/.emacs.d/url
 archive
